# recs_rl_bandits

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
bandits/: epsilon_greedy.py  thompson_sampling.py  ucb.py
ltr/: listwise.py  pairwise.py  pointwise.py
recommender/: collaborative_filtering.py  content_based.py  hybrid.py
rl/: policy_gradient.py  q_learning.py  simple_env.py
tests/: test_bandits.py  test_listwise.py  test_ltr.py  test_pairwise.py  test_policy_gradient.py  test_q_learning.py  test_recommender.py
utils/: metrics.py
